# Bodo

./: .clang-format  .clang-tidy  .dockerignore  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  404.html  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  README_pypi.md  appspec.yml  azure-arrow-cpp-release.yml  azure-azurefs-sas-token-provider.yml  azure-gen-license.yml  azure-iceberg-release-pipelines.yml  azure-linux-arm-pipelines.yml  azure-numba-dev-pipelines.yml  azure-pipelines.yml  azure-platform-release-pipelines.yml  azure-pyarrow-release.yml  azure-release-pipelines.yml  azure-weekly-pipelines.yml  azure-windows-pipelines.yml  buildspec.yml  clean.sh  codecov.yml  conda-forge.yml  latest  multi_idx_parquet.pq  numba_test.py  patch_pyfs.py  pixi.toml  (+10 more)
BodoSQL/: MANIFEST.in  README_pypi.md  pyproject.toml  setup.cfg  setup.py  versioneer.py
BodoSQL/bodosql/: __init__.py  _version.py  compiler.py  context.py  context_ext.py  ddl_ext.py  imported_java_classes.py  plan_conversion.py  py4j_gateway.py  pytest.ini  remove_pure_calls.py  runtests.py  runtests_caching.py  utils.py
BodoSQL/bodosql/bodosql_types/: database_catalog.py  filesystem_catalog.py  filesystem_catalog_ext.py  glue_catalog.py  glue_catalog_ext.py  rest_catalog.py  rest_catalog_ext.py  s3_tables_catalog.py  s3_tables_catalog_ext.py  snowflake_catalog.py  snowflake_catalog_ext.py  table_path.py  tabular_catalog.py
BodoSQL/bodosql/kernels/: array_kernel_utils.py  datetime_array_kernels.py  hash_array_kernels.py  javascript_udf_array_kernels.py  json_array_kernels.py  lateral.py  lead_lag.py  like_array_kernels.py  listagg.py  nested_data_kernels.py  numeric_array_kernels.py  other_array_kernels.py  parse_url_array_kernel.py  regexp_array_kernels.py  snowflake_conversion_array_kernels.py  special_handling_array_kernels.py  string_array_kernels.py  time_array_kernels.py  variadic_array_kernels.py  variant_array_kernels.py  window_agg_array_kernels.py
BodoSQL/bodosql/libs/: binary_functions.py  iceberg_merge_into.py  ntile_helper.py  null_handling.py  nullchecked_logical_operators.py  sql_operators.py
BodoSQL/bodosql/tests/: conftest.py  named_params_common.py  string_ops_common.py  test_agg_groupby.py  test_agg_nogroupby.py  test_alias.py  test_arith.py  test_automated_astype.py  test_bitwise.py  test_bodo.py  test_bodo_and_bodosql.py  test_bodo_basic_demo.py  test_bodo_sql_plan_cache.py  test_bool.py  test_case.py  test_cast.py  test_comparison.py  test_cond.py  test_cpp_backend.py  test_cross_join.py  test_date.py  test_datetime_difference_fns.py  test_datetime_fns.py  test_decimal.py  test_decimal_array.py  test_delta_table_merge_into.py  test_dict_arr_global_dict_flag.py  test_distinct.py  test_dynamic_param_arith.py  test_dynamic_param_case.py  test_dynamic_param_const_error.py  test_dynamic_param_funcs.py  test_dynamic_param_having.py  test_dynamic_param_jit_patterns.py  test_dynamic_param_limit.py  test_dynamic_param_select.py  test_dynamic_param_type_casting.py  test_dynamic_param_where.py  test_epoch_datetime_fns.py  test_errors.py  (+88 more)
BodoSQL/bodosql/tests/caching_tests/: test_dynamic_param_caching.py  test_named_param_caching.py  test_other_caching.py  test_rest_catalog_caching.py  test_snowflake_catalog_caching.py  test_snowflake_iceberg_catalog_caching.py  test_tabular_catalog_caching.py
BodoSQL/bodosql/tests/data/: date_coalesce.pq  dollar_string_test.sql  external_table_file_results.csv  jaro_winkler_data.csv  string_lower_upper.pq
BodoSQL/bodosql/tests/test_conversions/: test_snowflake_conversion_fns.py  test_snowflake_date_conversion_fns.py
BodoSQL/bodosql/tests/test_iceberg_merge_into/: test_iceberg_merge_into_bodo_datatypes.py  test_iceberg_merge_into_dict_encoding.py  test_iceberg_merge_into_full_ex.py  test_iceberg_merge_into_parity.py
BodoSQL/bodosql/tests/test_kernels/: test_array_kernels_dict_encoding.py  test_casting_array_kernels.py  test_comparison_array_kernels.py  test_crypto_funcs.py  test_datetime_array_kernels.py  test_floor_ceil_kernels.py  test_hash_array_kernels.py  (+17 more)
BodoSQL/buildscripts/python_library_build/: generate_libraries.py  write_generated_lib.py
BodoSQL/calcite_sql/: .gitignore  README.md  pom.xml
BodoSQL/calcite_sql/bodosql-calcite-application/: pom.xml
BodoSQL/calcite_sql/bodosql-calcite-core/: pom.xml
BodoSQL/dev_utils/: desc_table_to_java_code.py
azurefs-sas-token-provider/: README.md  pyproject.toml  setup.py
azurefs-sas-token-provider/bodo_azurefs_sas_token_provider/: pom.xml
iceberg/: .gitignore  README.md  README_pypi.md  pyproject.toml  setup.cfg  setup.py
iceberg/bodo_iceberg_connector/: __init__.py  catalog_conn.py  catalog_wrapper.py  errors.py  filter_to_java.py  java_helpers.py  jpype_support.py  launch_server.py  parquet_info.py  puffin.py  py4j_support.py  runner.py  schema.py  schema_helper.py  snowflake_prefetch.py  table_info.py  write.py
iceberg/bodo_iceberg_connector/bodo_apis/: filter_to_java.py  gateway.py  jpype_support.py  parquet_info.py  schema.py
iceberg/bodo_iceberg_connector/iceberg-java/: pom.xml
iceberg/bodo_iceberg_connector/iceberg-reader/: pom.xml
iceberg/bodo_iceberg_connector/py4j/: gateway.py  launch_server.py
iceberg/bodoicebergconnector/: __init__.py  launch_server.py  runner.py
iceberg/bodoicebergconnector/bodo_apis/: config.py  errors.py  filter_to_java.py  parquet_info.py  schema.py
iceberg/bodoicebergconnector/iceberg-reader/: pom.xml
iceberg/helper_scripts/: read_avro.py
iceberg/test-dataset-creation/: README.md  file_subset_deleted_rows_table.py  file_subset_empty_files_table.py  file_subset_partial_file.py  filter_pushdown_test_table.py  gen_all.sh  large_delete_table.py  manifest_list_avro_reader.py  partitions_dropped_dt_table.py  partitions_dt_table.py  partitions_general_table.py  reader.py  schema_evolved_table.py  simple_bool_binary_table.py  simple_dt_tsz_table.py  simple_list_table.py  simple_map_table.py  simple_numeric_table.py  simple_string_table.py  simple_struct_table.py  utils.py
(+36589 files in other folders)
